<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:orientation="vertical"
android:padding="@dimen/activity_padding"
tools:context=".view.EcheveriaBlackPrinceActivity">

<com.google.android.material.floatingactionbutton.FloatingActionButton
    android:id="@+id/floating_action_button"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center_horizontal|bottom"
    android:contentDescription="@string/fab_content_desc"
    app:srcCompat="@drawable/ic_cart_plus" />

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">
    <!-- media-->
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:contentDescription="1. Echeveria Black Prince"
        android:scaleType="centerCrop"
        app:srcCompat="@drawable/echeverria_black_prince" />

    <!--                Title secondary and supporting text-->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_margin"
        android:text="Echeveria Black Prince"
        android:textSize="@dimen/text_important"
        android:textStyle="bold|italic" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/medio_margin8"
            android:text="@string/Cost"
            android:textStyle="bold|italic" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/medio_margin8"
            android:text="@string/cost_7"
            android:textStyle="italic" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/medio_margin8"
        android:text="@string/from"
        android:textStyle="bold|italic" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Echeveria es un género polifilético perteneciente a la familia Crassulaceae. Cuenta con 393 especies que se distribuyen en zonas áridas, semiáridas y templadas del suroeste de Estados Unidos, México, Centroamérica y el norte de Sudamérica."
        android:textStyle="italic" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/medio_margin8"
        android:text="Situacion"
        android:textStyle="bold|italic" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Este cultivar se caracteriza por formar rosetas de hojas bastante compactas de +/- 16 cm de diámetro y +/- 8 cm de altura. Las rosetas crecen lentamente a diferencia de otras especies del género. "
        android:textStyle="italic" />


</LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>
