<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="@dimen/activity_padding"
    tools:context=".view.LoginActivity">

    <ImageView
        android:id="@+id/iv_logo"

        android:layout_width="@dimen/logo_width"
        android:layout_height="@dimen/logo_heigth"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/logo_margin_top"
        android:layout_marginBottom="@dimen/logo_margin_bottom"
        android:contentDescription="@string/app_name"
        android:src="@mipmap/crasula_variegada7" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:fontFamily="@font/berkshireswash_regular"
        android:includeFontPadding="false"
        android:text="Pati Plants"
        android:textAlignment="center"
        android:textColor="#355723"
        android:textSize="25sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:fontFamily="@font/radley_regular"
        android:includeFontPadding="false"
        android:text="Ingresar"
        android:textColor="#72bb53"
        android:textSize="25sp"
        android:textStyle="bold" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/login_email"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/radley_regular"
            android:inputType="textEmailAddress"
            android:textColor="#c1d045"
            android:textColorHint="#CDDC39"
            android:textSize="17sp"
            android:textStyle="bold" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_margin"
        android:hint="@string/login_password"
        app:endIconMode="password_toggle">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:fontFamily="@font/radley_regular"
            android:textSize="17sp"
            android:textColor="#c1d045"
            android:textStyle="bold"
            android:layout_marginBottom="15dp"
            android:layout_height="wrap_content"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_login"
        android:layout_marginTop="20dp"
        android:layout_width="345dp"
        android:layout_height="53dp"
        android:layout_gravity="center"
        android:layout_marginVertical="0dp"
        android:background="#72bb53"
        android:fontFamily="@font/radley_regular"
        android:text="Ingresar"
        android:textColor="@color/white"
        android:textSize="@dimen/text_important"
        android:textStyle="bold" />

    <com.google.android.material.progressindicator.LinearProgressIndicator
        android:layout_marginTop="0dp"
        android:layout_marginBottom="12dp"
        android:layout_marginStart="9dp"
        android:layout_marginEnd="9dp"
        android:id="@+id/pb_wait"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:fitsSystemWindows="true"
        android:indeterminate="true" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_create"
        android:layout_width="200dp"
        android:layout_height="46dp"
        android:layout_gravity="center"
        android:layout_marginVertical="12dp"
        android:background="#72bb53"
        android:fontFamily="@font/radley_regular"
        android:text="CREAR CUENTA"
        android:textColor="@color/white"
        android:textSize="@dimen/text_important"
        android:textStyle="bold" />


</LinearLayout>
